feat: create text translation request

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 SANIC_APP_HOST = '0.0.0.0'
 SANIC_APP_PORT = 8000
-SANIC_CASSANDRA_DATABASE = '{"NAME": "sanic-example", "PASSWORD": "cassandra", "USER": "cassandra", "KEYSPACE": "cqlengine", "HOST": "localhost"}'
-SANIC_KAFKA_PRODUCER = '{"BOOTSTRAP_SERVERS": ["localhost:9092"], "TOPICS": ["sanic-example"]}'
-SANIC_KAFKA_CONSUMER = '{"BOOTSTRAP_SERVERS": ["localhost:9092"], "TOPICS": ["sanic-example"], "GROUP": "sanic-example"}'
+SANIC_CASSANDRA_DATABASE = '{"NAME": "translation-tool", "PASSWORD": "cassandra", "USER": "cassandra", "KEYSPACE": {"NAME": "mykeyspace"}, "HOST": "localhost"}'
+SANIC_KAFKA_PRODUCER = '{"BOOTSTRAP_SERVERS": ["localhost:9092"], "TOPICS": ["translation-tool"]}'
+SANIC_KAFKA_CONSUMER = '{"BOOTSTRAP_SERVERS": ["localhost:9092"], "TOPICS": ["translation-tool"], "GROUP": "translation-tool"}'
+CQLENG_ALLOW_SCHEMA_MANAGEMENT = 1
