chore: complete create translation task vi http

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,8 @@ SANIC_APP_PORT = 8000
 SANIC_CASSANDRA_DATABASE = '{"NAME": "translation-tool", "PASSWORD": "cassandra", "USER": "cassandra", "KEYSPACE": {"NAME": "mykeyspace"}, "HOST": "localhost"}'
 SANIC_KAFKA_PRODUCER = '{"BOOTSTRAP_SERVERS": ["localhost:9092"], "TOPICS": ["translation-tool"]}'
 SANIC_KAFKA_CONSUMER = '{"BOOTSTRAP_SERVERS": ["localhost:9092"], "TOPICS": ["translation-tool"], "GROUP": "translation-tool"}'
+
 CQLENG_ALLOW_SCHEMA_MANAGEMENT = 1
+
+SANIC_TRANSLATION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
+SANIC_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
