--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 SANIC_APP_HOST = '0.0.0.0'
 SANIC_APP_PORT = 8000
 SANIC_CASSANDRA_DATABASE = '{"NAME": "translation-tool", "PASSWORD": "cassandra", "USER": "cassandra", "KEYSPACE": {"NAME": "translation_tool"}, "HOST": "localhost"}'
-SANIC_MONGODB_DATABASE = '{"DATABASE_NAME": "translation-tool", "PASSWORD": "root", "USER": "root", "HOST": "mongodb", "PORT": 27017, "MIN_POOL_SIZE": 10, "MAX_POOL_SIZE": 50}'
+SANIC_MONGODB_DATABASE = '{"DATABASE_NAME": "translation-tool", "PASSWORD": "root", "USER": "root", "HOST": "mongodb", "PORT": 27017, "CONN_OPTS": {"MIN_POOL_SIZE": 10, "MAX_POOL_SIZE": 50}}'
 SANIC_KAFKA_PRODUCER = '{"BOOTSTRAP_SERVERS": ["localhost:9092"], "TOPICS": ["translation-tool"]}'
 SANIC_KAFKA_CONSUMER = '{"BOOTSTRAP_SERVERS": ["localhost:9092"], "TOPICS": ["translation-tool"], "GROUP": "translation-tool"}'
 
