detecting language completed

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ SANIC_PRIVATE_TRANSLATION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.n
 SANIC_PRIVATE_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
 
 SANIC_PUBLIC_TRANSLATION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
-SANIC_PUBLIC_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
+SANIC_PUBLIC_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/detect_lang", "ALLOWED_CONCURRENT_REQUEST": 5}'
