--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ SANIC_KAFKA_CONSUMER = '{"BOOTSTRAP_SERVERS": ["localhost:9092"], "TOPICS": ["tr
 CQLENG_ALLOW_SCHEMA_MANAGEMENT = 1
 
 SANIC_PRIVATE_TRANSLATION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
-SANIC_PRIVATE_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
+SANIC_PRIVATE_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/detect_lang", "ALLOWED_CONCURRENT_REQUEST": 5}'
 
 SANIC_PUBLIC_TRANSLATION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
 SANIC_PUBLIC_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/detect_lang", "ALLOWED_CONCURRENT_REQUEST": 5}'
