--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,5 @@ SANIC_PUBLIC_TRANSLATION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.ne
 SANIC_PUBLIC_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/detect_lang", "ALLOWED_CONCURRENT_REQUEST": 5}'
 
 SANIC_OAUTH2_PROVIDER = '{"GOOGLE": {"METHOD": "GET", "URL": "https://www.googleapis.com/oauth2/v1/userinfo"}}'
-SANIC_TOKEN_TTL = 2592000
+SANIC_ACCESS_TOKEN_TTL = 86400
+SANIC_REFRESH_TOKEN_TTL = 2592000
