--- a/requirements2.txt
+++ b/requirements2.txt
@@ -22,6 +22,7 @@ kafka-python==2.0.2
 marshmallow==3.13.0
 motor==2.5.1
 multidict==5.1.0
+numpy==1.21.2
 pydantic==1.8.2
 pymongo==3.12.0
 python-dotenv==0.19.0
