--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ SANIC_PRIVATE_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://nmtuet
 
 SANIC_PUBLIC_TRANSLATION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
 SANIC_PUBLIC_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/detect_lang", "ALLOWED_CONCURRENT_REQUEST": 5}'
-SANIC_PUBLIC_SPEECH_RECOGNITION_API = '{"METHOD": "POST", "URL": "192.168.1.4", "ALLOWED_CONCURRENT_REQUEST": 5}'
+SANIC_PUBLIC_SPEECH_RECOGNITION_API = '{"METHOD": "POST", "URL": "http://192.168.1.4:8082/v2/jobs", "ALLOWED_CONCURRENT_REQUEST": 5}'
 
 SANIC_OAUTH2_PROVIDER = '{"GOOGLE": {"NAME": "GOOGLE", "METHOD": "GET", "URL": "https://www.googleapis.com/oauth2/v1/userinfo"}}'
 SANIC_ACCESS_TOKEN_TTL = 86400
