--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "react-scripts start DISABLE_ESLINT_PLUGIN=true",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
