--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.13",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "dotenv": "^10.0.0",
@@ -18,6 +19,7 @@
     "i18next": "^19.9.0",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
+    "query-string": "^7.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
