--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,11 +7,11 @@ SANIC_KAFKA_CONSUMER = '{"BOOTSTRAP_SERVERS": ["localhost:9092"], "TOPICS": ["tr
 
 CQLENG_ALLOW_SCHEMA_MANAGEMENT = 1
 
-SANIC_PRIVATE_TRANSLATION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
-SANIC_PRIVATE_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/detect_lang", "ALLOWED_CONCURRENT_REQUEST": 5}'
+SANIC_PRIVATE_TRANSLATION_API = '{"METHOD": "POST", "URL": "http://192.168.1.104:1010/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
+SANIC_PRIVATE_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://192.168.1.104:1010/detect_lang", "ALLOWED_CONCURRENT_REQUEST": 5}'
 
-SANIC_PUBLIC_TRANSLATION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
-SANIC_PUBLIC_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://nmtuet.ddns.net:1710/detect_lang", "ALLOWED_CONCURRENT_REQUEST": 5}'
+SANIC_PUBLIC_TRANSLATION_API = '{"METHOD": "POST", "URL": "http://192.168.1.104:1010/translate_paragraphs", "ALLOWED_CONCURRENT_REQUEST": 5}'
+SANIC_PUBLIC_LANGUAGE_DETECTION_API = '{"METHOD": "POST", "URL": "http://192.168.1.104:1010/detect_lang", "ALLOWED_CONCURRENT_REQUEST": 5}'
 SANIC_PUBLIC_SPEECH_RECOGNITION_API = '{"METHOD": "POST", "URL": "http://192.168.1.4:8082/v2/jobs", "ALLOWED_CONCURRENT_REQUEST": 5}'
 
 SANIC_OAUTH2_PROVIDER = '{"GOOGLE": {"NAME": "GOOGLE", "METHOD": "GET", "URL": "https://www.googleapis.com/oauth2/v1/userinfo"}}'
