--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_CLIENT_ID = 678502825589-nqgohudq0erdrtpghipkg00vj27v6q1r.apps.googleusercontent.com
-REACT_APP_SERVER_URL = http://nmtuet.ddns.net:8000/
+REACT_APP_CLIENT_ID = 797753824762-29sodoeph5vmrd3k0bbdcjisb6v6bfrn.apps.googleusercontent.com
+REACT_APP_SERVER_URL = https://nmtuet.ddns.net:8000/
