--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 REACT_APP_CLIENT_ID = 797753824762-29sodoeph5vmrd3k0bbdcjisb6v6bfrn.apps.googleusercontent.com
-REACT_APP_SERVER_URL = https://nmtuet.ddns.net:8000/
+REACT_APP_SERVER_URL = http://103.130.214.137/
+REACT_APP_SPEECH_RECOGNIZATION_URL = http://103.130.214.137/
