--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 REACT_APP_CLIENT_ID = 797753824762-29sodoeph5vmrd3k0bbdcjisb6v6bfrn.apps.googleusercontent.com
-REACT_APP_SERVER_URL = https://kcdichdangu.ddns.net:8000/
+REACT_APP_SERVER_URL = http://localhost:8000/
