--- a/tests/test_translate_pptx/private/test_private_pptx_002-APOng0mmx0GG2fKmvHjzCg.yaml
+++ b/tests/test_translate_pptx/private/test_private_pptx_002-APOng0mmx0GG2fKmvHjzCg.yaml
@@ -1,7 +1,7 @@
-id: IbQlzDPDN0iiZlmwDtotGA
+id: ufo6FnuyS0WEGiHfMapfxw
 projectId: 0H-KB3pUukajAQNNNyhliA
 projectName: My first Project
-created: 2022-04-13T00:44:25.3719350Z
+created: 2022-04-13T03:35:26.5771573Z
 owner: Duong Nguyen
 protocol: 1
 tests:
@@ -13,7 +13,7 @@ tests:
   driverType: Chrome
   version: 0.1
   creationDate: 2022-04-13T00:27:24.0000000
-  modificationDate: 2022-04-13T00:29:43.0000000
+  modificationDate: 2022-04-13T03:34:57.0000000
   settings:
     automationAssistant: true
     appId: 9it_3AdWuEWX1He3L_vdyA
@@ -129,7 +129,7 @@ tests:
       source: System
     parameterMaps:
     - name: keys
-      value: randomusername
+      value: admin
       direction: Input
     conditions: []
     validations: []
@@ -152,7 +152,7 @@ tests:
       source: System
     parameterMaps:
     - name: keys
-      value: randompassword
+      value: 12345678
       direction: Input
     conditions: []
     validations: []
