--- a/tests/test_translate_pptx/private/test_private_pptx_003-3vJsD8RNO0ayO7olXMFbbw.yaml
+++ b/tests/test_translate_pptx/private/test_private_pptx_003-3vJsD8RNO0ayO7olXMFbbw.yaml
@@ -1,7 +1,7 @@
-id: xP8V4XdEjE2CnR3kSAONPA
+id: AKyE0978bkKWzXSAnceI2w
 projectId: 0H-KB3pUukajAQNNNyhliA
 projectName: My first Project
-created: 2022-04-13T00:44:16.6837065Z
+created: 2022-04-13T03:35:23.0731037Z
 owner: Duong Nguyen
 protocol: 1
 tests:
@@ -13,7 +13,7 @@ tests:
   driverType: Chrome
   version: 0.1
   creationDate: 2022-04-13T00:31:42.0000000
-  modificationDate: 2022-04-13T00:32:50.0000000
+  modificationDate: 2022-04-13T03:35:13.0000000
   settings:
     automationAssistant: true
     appId: 9it_3AdWuEWX1He3L_vdyA
@@ -129,7 +129,7 @@ tests:
       source: System
     parameterMaps:
     - name: keys
-      value: randomuser
+      value: admin
       direction: Input
     conditions: []
     validations: []
@@ -152,7 +152,7 @@ tests:
       source: System
     parameterMaps:
     - name: keys
-      value: randompass
+      value: 12345678
       direction: Input
     conditions: []
     validations: []
